add my reservations for owner